k8s/nebula/apps/security/authentik/app/internal-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-int
  namespace: security
spec:
    hostnames:
      - id.skylab.fi
    parentRefs:
      - group: gateway.networking.k8s.io
        kind: Gateway
        name: envoy-internal
        namespace: networking
        sectionName: https
    rules:
      - backendRefs:
          - group: ""
            kind: Service
            name: authentik-server
            namespace: security
            port: 80
            weight: 1
        matches:
          - path:
              type: PathPrefix
              value: /
