k8s/nebula/apps/security/authentik/app/webfinger-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-webfinger
  namespace: security
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: networking
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - skylab.fi
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/webfinger
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: id.skylab.fi
