k8s/nebula/apps/security/authentik/app/webfinger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: authentik
    meta.helm.sh/release-namespace: security
    nginx.ingress.kubernetes.io/permanent-redirect: https://id.skylab.fi/.well-known/webfinger
    external-dns.alpha.kubernetes.io/target: ingress.skylab.fi
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.2.3
    helm.sh/chart: authentik-2024.2.2
    helm.toolkit.fluxcd.io/name: authentik
    helm.toolkit.fluxcd.io/namespace: security
  name: authentik-webfinger
  namespace: security
spec:
  ingressClassName: external-nginx
  rules:
    - host: skylab.fi
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /.well-known/webfinger
            pathType: Exact
  tls:
    - hosts:
        - skylab.fi
